# cloud-public

./: README.md
bedrock-cost-compare/: .gitignore  README.md  requirements.txt
bedrock-token-usage-monitor/: .gitignore  README.md  template.yaml
cloudwatch-application-signals-eks/: README.md
eks-manifest-auditor/: .gitignore  README.md  pyproject.toml
eks-manifest-auditor/docs/: roadmap.md
eks-manifest-auditor/eks_manifest_auditor/: __init__.py  main.py  models.py  parser.py  scanner.py  utils.py
eks-manifest-auditor/eks_manifest_auditor/checks/: __init__.py  health.py  ingress.py  security.py  service.py  serviceaccount.py  workload.py
eks-manifest-auditor/eks_manifest_auditor/reporters/: console.py  json_report.py  markdown.py
eks-manifest-auditor/examples/: bad-deployment.yaml  good-deployment.yaml  ingress-example.yaml
eks-manifest-auditor/tests/: test_cli_options.py  test_health_checks.py  test_ingress_checks.py  test_parser.py  test_reporters.py  test_security_checks.py  test_security_hardening_checks.py  test_service_checks.py  test_serviceaccount_checks.py  test_workload_checks.py
istio-helm-on-eks-guide/: .gitignore  README.md
keycloak-mcp-admin-automation/: .env.example  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  tsconfig.json
keycloak-mcp-readonly-server/: LICENSE  README.md  SECURITY.md  package.json
llm-cost-router/: .env.example  README.md
perplexity-sonar-api-examples/: .gitignore  README.md
private-eks-helm-github-actions/: README.md
prometheus-kubernetes-monitoring-guide/: README.md
(+197 files in other folders)
