[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eks-manifest-auditor"
version = "0.1.0"
description = "Local Kubernetes/EKS manifest static analysis CLI."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cloud Lab" }]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
eks-manifest-auditor = "eks_manifest_auditor.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".deps", ".venv", ".tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
